--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,11 @@
 # testing
 /coverage
 
-# production
-/build
+src/*
+public/*
+build/static/css/*.map
+build/static/js/*.map
+
 
 # misc
 .DS_Store
@@ -21,3 +24,14 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
