--- a/package.json
+++ b/package.json
@@ -2,6 +2,17 @@
   "name": "afphoto",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "10.x"
+  },
+  "scripts": {
+    "start": "node server",
+    "build": "cd react-ui/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+  },
+  "cacheDirectories": [
+    "node_modules",
+    "react-ui/node_modules"
+  ],
   "dependencies": {
     "cloudinary": "^1.11.0",
     "cors": "^2.8.4",
@@ -9,35 +20,7 @@
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "express-form-data": "^2.0.6",
-    "path": "^0.12.7",
-    "@fortawesome/fontawesome-free-brands": "^5.0.13",
-    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
-    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
-    "@fortawesome/react-fontawesome": "0.1.0-11",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-notify-toast": "^0.5.0",
-    "react-scripts": "3.0.1"
+    "path": "^0.12.7"
   },
-  "scripts": {
-    "start": "node server.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "devDependencies": {}
 }
