--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "dependencies": {
     "cloudinary": "^1.11.0",
     "cors": "^2.8.4",
-    "dotenv": "^6.0.0",
+    "dotenv": "^6.2.0",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "express-form-data": "^2.0.6",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "redis": "^2.8.0"
   },
   "devDependencies": {}
 }
