--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -7,9 +7,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
+    "query-string": "^6.8.1",
     "react": "^16.8.6",
+    "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.6",
+    "react-grid-gallery": "^0.5.5",
+    "react-image-gallery": "^0.8.17",
     "react-notify-toast": "^0.5.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
