--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "express-form-data": "^2.0.6",
+    "http-status-codes": "^1.3.2",
     "path": "^0.12.7",
     "redis": "^2.8.0"
   },
